Remove devDeps, adjust projects list, and rename package.json name for now

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
         </li>
         <li class="mb1">
           <span class="grey mr2">[JS]&nbsp;</span>
-          <a target="_blank" href="https://github.com/brandonjpierce/b-ioc">b-ioc</a>
+          <a target="_blank" href="https://github.com/brandonjpierce/b-init">b-init</a>
         </li>
         <li class="mb1">
           <span class="grey mr2">[CSS]</span>
