Package updates, now cleanup, cache implementation

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Brandon Pierce - Developer, Designer, &amp; Consultant">
     <title>Brandon Pierce &middot; Developer, Designer, &amp; Consultant</title>
-    <link href="style.css" rel="stylesheet">
+    {{styles}}
   </head>
   <body>
     <div class="container">
@@ -15,7 +15,7 @@
       </div>
 
       <h2 class="h3 black"># About</h2>
-      <p>Brandon Pierce is a multi-disciplined developer &amp; designer specializing in front-end architecture, modular design systems, and universal JavaScript applications. Based in Elkhart, Indiana.</p>
+      <p>Brandon Pierce is a multi-disciplined developer &amp; designer specializing in front-end architecture, modular design systems, and universal JavaScript applications.</p>
       <div class="flex mb4">
         <a class="mr3" target="_blank" href="https://github.com/brandonjpierce">Github</a>
         <a class="mr3" target="_blank" href="https://twitter.com/BrandonJPierce">Twitter</a>
@@ -32,6 +32,7 @@
         <li class="mb1">Realtime applications</li>
         <li class="mb1">Native applications</li>
         <li class="mb1">Responsive web design</li>
+        <li class="mb1">Framer Module Development</li>
       </ul>
 
       <h2 class="h3 black"># Experience</h2>
@@ -67,6 +68,10 @@
         <li class="mb1">
           <span class="grey mr2">[JS]&nbsp;</span>
           <a target="_blank" href="https://github.com/bpxl-labs/redux-handbook">redux-handbook</a>
+        </li>
+        <li class="mb1">
+          <span class="grey mr2">[JS]&nbsp;</span>
+          <a target="_blank" href="https://github.com/bpxl-labs/MapboxLayer">mapboxlayer</a>
         </li>
         <li class="mb1">
           <span class="grey mr2">[JS]&nbsp;</span>
