--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Brandon Pierce - Developer, Designer, &amp; Consultant">
     <title>Brandon Pierce &middot; Developer, Designer, &amp; Consultant</title>
-    {{styles}}
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
