--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Brandon Pierce - Developer, Designer, &amp; Consultant">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <title>Brandon Pierce &middot; Developer, Designer, &amp; Consultant</title>
     <link href="style.css" rel="stylesheet">
   </head>
@@ -45,17 +47,6 @@
           <span class="grey mr3">2012</span>
           <a target="_blank" href="http://carved.com">Carved</a>
         </li>
-        <li class="flex items-center mb1">
-          <span class="grey mr3">2012</span>
-          <a target="_blank" href="http://stratashops.net">Stratashops</a>
-        </li>
-        <li class="flex items-center mb1">
-          <span class="grey mr3">2012</span>
-          <a target="_blank" href="http://adstreaminc.com">Ad Stream</a>
-        </li>
-        <li class="flex items-center mb1">
-          <span class="grey mr3">2012</span>
-          <a target="_blank" href="http://footbagshop.com">Footbagshop</a>
         </li>
       </ul>
     </div>
