Inline css, misc cleanup, updating home page content

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <title>Brandon Pierce &middot; Developer, Designer, &amp; Consultant</title>
-    <link href="style.css" rel="stylesheet">
+    <style type="text/css">__STYLES__</style>
   </head>
   <body>
     <div class="container">
@@ -17,22 +17,24 @@
       </div>
 
       <h2 class="h3 black"># About</h2>
-      <p>Brandon Pierce is a multi-disciplined developer &amp; designer specializing in front-end architecture, modular design systems, and universal JavaScript applications.</p>
+      <p>Brandon Pierce is a multi-disciplined developer &amp; designer currently working with the awesome folks at Black Pixel and living in Nashville, Tennessee.</p>
       <div class="flex mb4">
-        <a class="mr3" target="_blank" href="https://github.com/brandonjpierce">Github</a>
-        <a class="mr3" target="_blank" href="https://twitter.com/BrandonJPierce">Twitter</a>
+        <a class="mr3" href="https://github.com/brandonjpierce">Github</a>
+        <a class="mr3" href="https://twitter.com/BrandonJPierce">Twitter</a>
         <a href="mailto:brandonpierce91@gmail.com">Email</a>
       </div>
 
       <h2 class="h3 black"># Services</h2>
       <ul class="list-inside p0 mt0 mb4">
         <li class="mb1">Full stack development</li>
-        <li class="mb1">Modular design systems</li>
+        <li class="mb1">Serverless (FaaS) development</li>
         <li class="mb1">Front-end consulting</li>
-        <li class="mb1">Nodejs consulting</li>
-        <li class="mb1">React Consulting</li>
+        <li class="mb1">Back-end consulting</li>
+        <li class="mb1">Dev-ops consulting</li>
         <li class="mb1">Realtime applications</li>
-        <li class="mb1">Native applications</li>
+        <li class="mb1">React Native applications</li>
+        <li class="mb1">Electron applications</li>
+        <li class="mb1">Modular design systems</li>
         <li class="mb1">Responsive web design</li>
         <li class="mb1">Framer Module Development</li>
       </ul>
@@ -41,12 +43,15 @@
       <ul class="list-reset mb4">
         <li class="flex items-center mb1">
           <span class="grey mr3">2016</span>
-          <a target="_blank" href="http://blackpixel.com">Black Pixel</a>
+          <a href="http://blackpixel.com">Black Pixel</a>
         </li>
         <li class="flex items-center mb1">
           <span class="grey mr3">2012</span>
-          <a target="_blank" href="http://carved.com">Carved</a>
+          <a href="http://carved.com">Carved + sister companies</a>
         </li>
+        <li class="flex items-center mb1">
+          <span class="grey mr3">2012</span>
+          <a href="http://blackpixel.com">Freelance</a>
         </li>
       </ul>
     </div>
