--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Brandon Pierce - Developer, Designer, &amp; Consultant">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Brandon Pierce - Developer, Designer, &amp; Consultant"
+    />
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <title>Brandon Pierce &middot; Developer, Designer, &amp; Consultant</title>
-    <style type="text/css">__STYLES__</style>
+    <style type="text/css">
+      __STYLES__
+    </style>
   </head>
   <body>
     <div class="container">
@@ -17,7 +22,12 @@
       </div>
 
       <h2 class="h3 black"># About</h2>
-      <p>Brandon Pierce is a multi-disciplined developer &amp; designer currently working with the awesome folks at Black Pixel and living in Nashville, Tennessee.</p>
+      <p>
+        Brandon Pierce is a multi-disciplined developer &amp; designer currently
+        leading teams at&nbsp;<a href="https://hypergiant.com" target="_blank"
+          >Hypergiant</a
+        >&nbsp;and living in Nashville, Tennessee.
+      </p>
       <div class="flex mb4">
         <a class="mr3" href="https://github.com/brandonjpierce">Github</a>
         <a class="mr3" href="https://twitter.com/BrandonJPierce">Twitter</a>
@@ -31,27 +41,32 @@
         <li class="mb1">Front-end consulting</li>
         <li class="mb1">Back-end consulting</li>
         <li class="mb1">Dev-ops consulting</li>
-        <li class="mb1">Realtime applications</li>
+        <li class="mb1">React applications</li>
         <li class="mb1">React Native applications</li>
+        <li class="mb1">GraphQL applications</li>
         <li class="mb1">Electron applications</li>
         <li class="mb1">Modular design systems</li>
         <li class="mb1">Responsive web design</li>
-        <li class="mb1">Framer Module Development</li>
+        <li class="mb1">Framer module development</li>
       </ul>
 
       <h2 class="h3 black"># Experience</h2>
       <ul class="list-reset mb4">
         <li class="flex items-center mb1">
+          <span class="grey mr3">2018</span>
+          <a href="https://hypergiant.com">Hypergiant</a>
+        </li>
+        <li class="flex items-center mb1">
           <span class="grey mr3">2016</span>
-          <a href="http://blackpixel.com">Black Pixel</a>
+          <a href="https://blackpixel.com">Black Pixel</a>
         </li>
         <li class="flex items-center mb1">
           <span class="grey mr3">2012</span>
-          <a href="http://carved.com">Carved + sister companies</a>
+          <a href="https://carved.com">Carved</a>
         </li>
         <li class="flex items-center mb1">
           <span class="grey mr3">2012</span>
-          <a href="http://blackpixel.com">Freelance</a>
+          <a href="https://brandonjpierce.com">Freelance</a>
         </li>
       </ul>
     </div>
