Location change, bumping for cert

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         Brandon Pierce is a multi-disciplined developer &amp; designer currently
         leading teams at&nbsp;<a href="https://hypergiant.com" target="_blank"
           >Hypergiant</a
-        >&nbsp;and living in Nashville, Tennessee.
+        >&nbsp;and living in Elkhart, Indiana.
       </p>
       <div class="flex mb4">
         <a class="mr3" href="https://github.com/brandonjpierce">Github</a>
@@ -40,14 +40,13 @@
         <li class="mb1">Serverless (FaaS) development</li>
         <li class="mb1">Front-end consulting</li>
         <li class="mb1">Back-end consulting</li>
-        <li class="mb1">Dev-ops consulting</li>
         <li class="mb1">React applications</li>
         <li class="mb1">React Native applications</li>
+        <li class="mb1">Gatsby applications</li>
         <li class="mb1">GraphQL applications</li>
         <li class="mb1">Electron applications</li>
         <li class="mb1">Modular design systems</li>
         <li class="mb1">Responsive web design</li>
-        <li class="mb1">Framer module development</li>
       </ul>
 
       <h2 class="h3 black"># Experience</h2>
